bug 818009 - canActivate: only click-to-play-type plugins are valid (beta) r=jaws a=lsblakk